--- a/Homework5/Homework5/Views/Home/Create.cshtml
+++ b/Homework5/Homework5/Views/Home/Create.cshtml
@@ -1,5 +1,11 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@model Homework5.Models.User
+
+@{ 
+    ViewBag.Title = "Create User";
+}
+
+@using (Html.BeginForm())
+{
+
+
 }
